--- a/student_Xcode15/Unit1/GuidedProject_Light/Light/Light/Base.lproj/Main.storyboard
+++ b/student_Xcode15/Unit1/GuidedProject_Light/Light/Light/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Nik Atanesian"/>
                                 <connections>
                                     <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HUf-o0-v4X"/>
                                 </connections>
